// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Flag renders Custom flag with styles correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 10,
        "fontWeight": "400",
        "letterSpacing": 1,
        "lineHeight": 20,
      },
      undefined,
      Object {
        "color": "green",
      },
    ]
  }
>
  <svg
    height={7}
    style={Object {}}
    viewBox="0 0 20 20"
    width={7}
  >
    <g
      fill="green"
      style={Object {}}
    >
      <path
        d="M 0,10 10,20 20,10 10,0 Z"
        style={Object {}}
      />
    </g>
  </svg>
   
  CUSTOM
</Text>
`;

exports[`Article Flag renders Custom flag without styles correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 10,
        "fontWeight": "400",
        "letterSpacing": 1,
        "lineHeight": 20,
      },
      undefined,
      Object {},
    ]
  }
>
  <svg
    height={7}
    style={Object {}}
    viewBox="0 0 20 20"
    width={7}
  >
    <g
      fill="black"
      style={Object {}}
    >
      <path
        d="M 0,10 10,20 20,10 10,0 Z"
        style={Object {}}
      />
    </g>
  </svg>
   
  CUSTOM
</Text>
`;

exports[`Article Flag renders New flag correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 10,
        "fontWeight": "400",
        "letterSpacing": 1,
        "lineHeight": 20,
      },
      Object {
        "color": "#E34605",
      },
      Object {},
    ]
  }
>
  <svg
    height={7}
    style={Object {}}
    viewBox="0 0 20 20"
    width={7}
  >
    <g
      fill="#E34605"
      style={Object {}}
    >
      <path
        d="M 0,10 10,20 20,10 10,0 Z"
        style={Object {}}
      />
    </g>
  </svg>
   
  NEW
</Text>
`;

exports[`Article Flag renders Sponsored flag correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 10,
        "fontWeight": "400",
        "letterSpacing": 1,
        "lineHeight": 20,
      },
      Object {
        "color": "#4D4D4D",
      },
      Object {},
    ]
  }
>
  <svg
    height={7}
    style={Object {}}
    viewBox="0 0 20 20"
    width={7}
  >
    <g
      fill="#4D4D4D"
      style={Object {}}
    >
      <path
        d="M 0,10 10,20 20,10 10,0 Z"
        style={Object {}}
      />
    </g>
  </svg>
   
  SPONSORED
</Text>
`;

exports[`Article Flag renders Updated flag correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 10,
        "fontWeight": "400",
        "letterSpacing": 1,
        "lineHeight": 20,
      },
      Object {
        "color": "#3C81BE",
      },
      Object {},
    ]
  }
>
  <svg
    height={7}
    style={Object {}}
    viewBox="0 0 20 20"
    width={7}
  >
    <g
      fill="#3C81BE"
      style={Object {}}
    >
      <path
        d="M 0,10 10,20 20,10 10,0 Z"
        style={Object {}}
      />
    </g>
  </svg>
   
  UPDATED
</Text>
`;

exports[`Article Flag renders correctly 1`] = `null`;
